samples/_failures_safe/1761204325_034dfe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38a70bce.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_38a70bce.c:183:49: error: expected ‘)’ at end of input
  183 |             printf("Vertex %d: unreachable\n", i
      |                   ~                             ^
      |                                                 )
./samples/SAFE/__tmp_38a70bce.c:183:13: error: expected declaration or statement at end of input
  183 |             printf("Vertex %d: unreachable\n", i
      |             ^~~~~~
./samples/SAFE/__tmp_38a70bce.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_38a70bce.c:183:13: error: expected declaration or statement at end of input
